<resources>
    <string name="app_name">Taskmaster</string>
    <string name="title">My Tasks</string>
    <string name="add_Task">ADD TASK</string>
    <string name="all_Task">ALL TASKS</string>
    <string name="image">Image</string>
    <string name="textview">TextView</string>
    <string name="taskInputTitle">Task Title</string>
    <string name="taskInputDescription">Task Description</string>
    <string name="SubmitButtonForNewTask">ADD Task</string>
    <string name="addTaskTitle">Add Task</string>
    <string name="allTaskTitle">All Task</string>
    <string name="submitMessage">Task was added</string>
    <string name="setting">Setting</string>
    <string name="task_detail1">Task 1</string>
    <string name="task_detail2">Task 2</string>
    <string name="task_detail3">Task 3</string>
    <string name="update_username">update username</string>
    <string name="update">Save</string>
    <string name="setting_Title">Setting</string>
    <string name="update_username_title">Update UserName</string>
    <string name="delete">delete</string>
    <string name="username">username</string>
    <string name="you_don_t_choose_any_team">You don\'t choose any Team</string>
    <string name="choose_a_team">Choose a Team</string>
    <string name="team_1">team 1</string>
    <string name="team_2">team 2</string>
    <string name="team_3">team 3</string>
    <string name="task_detail">Task Detail :</string>
    <string name="task_title_detail">Task Detail</string>
    <string name="task_body">Task body :</string>
    <string name="task_body_details">Task body</string>
    <string name="task_title_details">Task title :</string>
    <string name="task_title">Task title</string>
    <string name="task_title_input">Task Title</string>
    <string name="task_body_input">Task Body</string>
    <string name="task_status_input">Task Status</string>
    <string name="choose_a_team_input">Choose a Team</string>
    <string name="team_1_radio">team 1</string>
    <string name="team_2_radio">team 2</string>
    <string name="team_3_radio">team 3</string>
    <string name="task_title_card">Task title</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="log_in">Login</string>
    <string name="signup">signup</string>
    <string name="verification">Verification</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="verify">verify</string>
    <string name="logout">logout</string>
    <string name="upload_file">upload file</string>
    <string name="todo">TODO</string>
    <string name="Location">Locatoin</string>
</resources>