<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_task"
        android:layout_width="match_parent"
        android:layout_height="401dp"
        android:layout_margin="15dp"
        android:background="#F6F6F6"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/allTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Team"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bangers"
        android:text="@string/title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="24dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/red"
        android:textColor="@color/white"
        />


    <Button
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="23dp"
        android:text="@string/setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <Button-->
    <!--        android:id="@+id/taskDetails1"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="52dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:text="@string/task_detail1"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/taskDetails2"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/addTask" />-->

    <!--    <Button-->
    <!--        android:id="@+id/taskDetails2"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:text="@string/task_detail2"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/taskDetails3"-->
    <!--        app:layout_constraintHorizontal_bias="0.173"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/taskDetails1"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/allTask" />-->

    <!--    <Button-->
    <!--        android:id="@+id/taskDetails3"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="60dp"-->
    <!--        android:text="@string/task_detail3"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/taskDetails2"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/allTask" />-->




    <Button
        android:id="@+id/allTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:text="@string/all_Task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_task"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:text="@string/add_Task"
        app:layout_constraintEnd_toStartOf="@+id/allTask"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_task"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/usernameInHomePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/Team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/you_don_t_choose_any_team"
        app:layout_constraintBottom_toTopOf="@+id/recycler_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInHomePage"
        app:layout_constraintVertical_bias="0.583" />

</androidx.constraintlayout.widget.ConstraintLayout>