...
                android:text="@string/task_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/singleTaskTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_title_detail" />
        </LinearLayout>

        <LinearLayout
...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_title_details" />

            <TextView
                android:id="@+id/task_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_title" />


        </LinearLayout>
...
